Changelog for Swagger2

0.01
       * Add load()
       * Add pod() and Swagger2::POD
       * Add to_string($format)
       * Started project
